# wc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  wc.dia
